2021-05-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/sec_powm.c (sec_binvert_limb): New static function.

	* mpn/generic/powm.c (win_size): Remove the unused value from array.
	* mpn/generic/sec_powm.c (win_size): Likewise.

2021-05-08  Marc Glisse  <marc.glisse@inria.fr>

	* doc/gmp.texi: Mention shifts in bit manipulation.

2021-03-11  Torbjörn Granlund  <tg@gmplib.org>

	* longlong.h: Disable s390 patterns which makes clang barf.

2021-03-09  Torbjörn Granlund  <tg@gmplib.org>

	With Marius Hillenbrand:
	* configure.ac, config.guess, config.sub, acinclude.m4:
	Recognise CPUs z13-z15.

2021-03-08  Torbjörn Granlund  <tg@gmplib.org>

	* longlong.h (68000 umul_ppmm): Add an early-clobber &.

2021-01-18  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/x86_64/zen3/sbpi1_bdiv_r.asm: New grabber file.

2021-01-17  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/x86_64/coreibwl/sbpi1_bdiv_r.asm: New file.

2021-01-01  Torbjörn Granlund  <tg@gmplib.org>

	* configure.ac: Handle zen3 different from zen2.

	* mpn/x86_64/zen3/addmul_1.asm: New grabber file.
	* mpn/x86_64/zen3/mul_basecase.asm: Likewise.
	* mpn/x86_64/zen3/sqr_basecase.asm: Likewise.

	* mpn/x86_64/zen3/mul_1.asm: New file.

2020-12-25  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/arm64/applem1/sqr_basecase.asm: New file, do 2x and limb squaring
	in main loop.

2020-12-21  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/arm64/applem1/aorsmul_1.asm: Provide addmul_1c entry point.

2020-12-20  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/arm64/copyi.asm: Rewrite to use scalar regs.
	* mpn/arm64/copyd.asm: Likewise.

2020-12-12  Marc Glisse  <marc.glisse@inria.fr>

	* gmp-h.in (_GMP_H_HAVE_FILE): Test also _STDIO (for HPE NonStop).

2020-12-04  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/arm64/applem1/gmp-mparam.h: New file.

	* mpn/generic/mod_1_1.c: Provide add_mssaaaa for arm64.
	* mpn/generic/div_qr_1n_pi1.c: Likewise.

	* mpn/arm64/divrem_1.asm: Use sub insn for subtracting constants.
